src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> unit
Rule 2     file -> file unit
Rule 3     unit -> fun_def
Rule 4     unit -> declaration ;
Rule 5     fun_def -> declaration_specifier ID ( ) compound_statement
Rule 6     fun_def -> declaration_specifier ID ( declaration_list ) compound_statement
Rule 7     statement -> expression ;
Rule 8     statement -> declaration ;
Rule 9     statement -> compound_statement
Rule 10    expression -> ID ( )
Rule 11    expression -> ID ( expression_list )
Rule 12    expression -> ASM ( S_CONST )
Rule 13    expression -> PRINTF ( S_CONST )
Rule 14    declaration_specifier -> VOID
Rule 15    declaration_specifier -> INT
Rule 16    declaration_specifier -> CHAR
Rule 17    declaration_specifier -> FLOAT
Rule 18    declaration_specifier -> INT pointer
Rule 19    declaration_specifier -> CHAR pointer
Rule 20    declaration_specifier -> FLOAT pointer
Rule 21    statement -> RETURN expression ;
Rule 22    statement -> RETURN ;
Rule 23    statement -> BREAK ;
Rule 24    statement -> CONTINUE ;
Rule 25    statement -> WHILE ( expression ) statement
Rule 26    statement -> DO statement WHILE ( expression ) ;
Rule 27    statement -> FOR ( expression ; expression ; expression ) statement
Rule 28    statement -> IF ( expression ) statement
Rule 29    statement -> IF ( expression ) statement ELSE statement
Rule 30    declaration -> declaration_specifier ID [ NUMBER ] = { expression_list }
Rule 31    declaration -> declaration_specifier ID [ NUMBER ]
Rule 32    declaration -> declaration_specifier ID [ FLOAT ] = { expression_list }
Rule 33    declaration -> declaration_specifier ID [ FLOAT ]
Rule 34    declaration -> declaration_specifier ID = expression
Rule 35    declaration -> declaration_specifier ID
Rule 36    expression -> MINUSMINUS ID
Rule 37    expression -> ID MINUSMINUS
Rule 38    expression -> PLUSPLUS ID
Rule 39    expression -> ID PLUSPLUS
Rule 40    expression -> ID XOREQUAL expression
Rule 41    expression -> ID ANDEQUAL expression
Rule 42    expression -> ID OREQUAL expression
Rule 43    expression -> ID TIMESEQUAL expression
Rule 44    expression -> ID DIVEQUAL expression
Rule 45    expression -> ID PLUSEQUAL expression
Rule 46    expression -> ID MINUSEQUAL expression
Rule 47    expression -> ID = expression
Rule 48    expression_list -> expression
Rule 49    expression_list -> expression_list , expression
Rule 50    declaration_list -> declaration
Rule 51    declaration_list -> declaration_list , declaration
Rule 52    expression -> expression + expression
Rule 53    expression -> expression - expression
Rule 54    expression -> expression * expression
Rule 55    expression -> expression / expression
Rule 56    expression -> expression & expression
Rule 57    expression -> expression | expression
Rule 58    expression -> expression ^ expression
Rule 59    expression -> ~ expression
Rule 60    expression -> - expression
Rule 61    expression -> ( expression )
Rule 62    expression -> ID [ expression ]
Rule 63    expression -> ID [ expression ] = expression
Rule 64    expression -> NUMBER
Rule 65    expression -> FLOAT
Rule 66    expression -> ID
Rule 67    expression -> & ID
Rule 68    expression -> & ID [ expression ]
Rule 69    expression -> * ID = expression
Rule 70    expression -> * ID
Rule 71    pointer -> *
Rule 72    pointer -> pointer *
Rule 73    expression -> C_CONST
Rule 74    expression -> eq_exp
Rule 75    eq_exp -> expression EQ expression
Rule 76    eq_exp -> expression NE expression
Rule 77    eq_exp -> expression LOR expression
Rule 78    eq_exp -> expression LAND expression
Rule 79    eq_exp -> expression < expression
Rule 80    eq_exp -> expression > expression
Rule 81    eq_exp -> expression GE expression
Rule 82    eq_exp -> expression LE expression
Rule 83    compound_statement -> { statement_list }
Rule 84    compound_statement -> { }
Rule 85    statement_list -> statement
Rule 86    statement_list -> statement_list statement

Terminals, with rules where they appear

&                    : 56 67 68
(                    : 5 6 10 11 12 13 25 26 27 28 29 61
)                    : 5 6 10 11 12 13 25 26 27 28 29 61
*                    : 54 69 70 71 72
+                    : 52
,                    : 49 51
-                    : 53 60
/                    : 55
;                    : 4 7 8 21 22 23 24 26 27 27
<                    : 79
=                    : 30 32 34 47 63 69
>                    : 80
ANDEQUAL             : 41
ASM                  : 12
BREAK                : 23
CHAR                 : 16 19
CONTINUE             : 24
C_CONST              : 73
DIVEQUAL             : 44
DO                   : 26
ELSE                 : 29
EQ                   : 75
FLOAT                : 17 20 32 33 65
FOR                  : 27
GE                   : 81
ID                   : 5 6 10 11 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 62 63 66 67 68 69 70
IF                   : 28 29
INT                  : 15 18
LAND                 : 78
LE                   : 82
LOR                  : 77
MINUSEQUAL           : 46
MINUSMINUS           : 36 37
NE                   : 76
NUMBER               : 30 31 64
OREQUAL              : 42
PLUSEQUAL            : 45
PLUSPLUS             : 38 39
PRINTF               : 13
RETURN               : 21 22
S_CONST              : 12 13
TIMESEQUAL           : 43
VOID                 : 14
WHILE                : 25 26
XOREQUAL             : 40
[                    : 30 31 32 33 62 63 68
]                    : 30 31 32 33 62 63 68
^                    : 58
error                : 
{                    : 30 32 83 84
|                    : 57
}                    : 30 32 83 84
~                    : 59

Nonterminals, with rules where they appear

compound_statement   : 5 6 9
declaration          : 4 8 50 51
declaration_list     : 6 51
declaration_specifier : 5 6 30 31 32 33 34 35
eq_exp               : 74
expression           : 7 21 25 26 27 27 27 28 29 34 40 41 42 43 44 45 46 47 48 49 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61 62 63 63 68 69 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82
expression_list      : 11 30 32 49
file                 : 2 0
fun_def              : 3
pointer              : 18 19 20 72
statement            : 25 26 27 28 29 29 85 86
statement_list       : 83 86
unit                 : 1 2

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . unit
    (2) file -> . file unit
    (3) unit -> . fun_def
    (4) unit -> . declaration ;
    (5) fun_def -> . declaration_specifier ID ( ) compound_statement
    (6) fun_def -> . declaration_specifier ID ( declaration_list ) compound_statement
    (30) declaration -> . declaration_specifier ID [ NUMBER ] = { expression_list }
    (31) declaration -> . declaration_specifier ID [ NUMBER ]
    (32) declaration -> . declaration_specifier ID [ FLOAT ] = { expression_list }
    (33) declaration -> . declaration_specifier ID [ FLOAT ]
    (34) declaration -> . declaration_specifier ID = expression
    (35) declaration -> . declaration_specifier ID
    (14) declaration_specifier -> . VOID
    (15) declaration_specifier -> . INT
    (16) declaration_specifier -> . CHAR
    (17) declaration_specifier -> . FLOAT
    (18) declaration_specifier -> . INT pointer
    (19) declaration_specifier -> . CHAR pointer
    (20) declaration_specifier -> . FLOAT pointer

    VOID            shift and go to state 7
    INT             shift and go to state 8
    CHAR            shift and go to state 9
    FLOAT           shift and go to state 6

    file                           shift and go to state 1
    unit                           shift and go to state 2
    fun_def                        shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifier          shift and go to state 5

state 1

    (0) S' -> file .
    (2) file -> file . unit
    (3) unit -> . fun_def
    (4) unit -> . declaration ;
    (5) fun_def -> . declaration_specifier ID ( ) compound_statement
    (6) fun_def -> . declaration_specifier ID ( declaration_list ) compound_statement
    (30) declaration -> . declaration_specifier ID [ NUMBER ] = { expression_list }
    (31) declaration -> . declaration_specifier ID [ NUMBER ]
    (32) declaration -> . declaration_specifier ID [ FLOAT ] = { expression_list }
    (33) declaration -> . declaration_specifier ID [ FLOAT ]
    (34) declaration -> . declaration_specifier ID = expression
    (35) declaration -> . declaration_specifier ID
    (14) declaration_specifier -> . VOID
    (15) declaration_specifier -> . INT
    (16) declaration_specifier -> . CHAR
    (17) declaration_specifier -> . FLOAT
    (18) declaration_specifier -> . INT pointer
    (19) declaration_specifier -> . CHAR pointer
    (20) declaration_specifier -> . FLOAT pointer

    VOID            shift and go to state 7
    INT             shift and go to state 8
    CHAR            shift and go to state 9
    FLOAT           shift and go to state 6

    unit                           shift and go to state 10
    fun_def                        shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifier          shift and go to state 5

state 2

    (1) file -> unit .

    VOID            reduce using rule 1 (file -> unit .)
    INT             reduce using rule 1 (file -> unit .)
    CHAR            reduce using rule 1 (file -> unit .)
    FLOAT           reduce using rule 1 (file -> unit .)
    $end            reduce using rule 1 (file -> unit .)


state 3

    (3) unit -> fun_def .

    VOID            reduce using rule 3 (unit -> fun_def .)
    INT             reduce using rule 3 (unit -> fun_def .)
    CHAR            reduce using rule 3 (unit -> fun_def .)
    FLOAT           reduce using rule 3 (unit -> fun_def .)
    $end            reduce using rule 3 (unit -> fun_def .)


state 4

    (4) unit -> declaration . ;

    ;               shift and go to state 11


state 5

    (5) fun_def -> declaration_specifier . ID ( ) compound_statement
    (6) fun_def -> declaration_specifier . ID ( declaration_list ) compound_statement
    (30) declaration -> declaration_specifier . ID [ NUMBER ] = { expression_list }
    (31) declaration -> declaration_specifier . ID [ NUMBER ]
    (32) declaration -> declaration_specifier . ID [ FLOAT ] = { expression_list }
    (33) declaration -> declaration_specifier . ID [ FLOAT ]
    (34) declaration -> declaration_specifier . ID = expression
    (35) declaration -> declaration_specifier . ID

    ID              shift and go to state 12


state 6

    (17) declaration_specifier -> FLOAT .
    (20) declaration_specifier -> FLOAT . pointer
    (71) pointer -> . *
    (72) pointer -> . pointer *

    ID              reduce using rule 17 (declaration_specifier -> FLOAT .)
    *               shift and go to state 14

    pointer                        shift and go to state 13

state 7

    (14) declaration_specifier -> VOID .

    ID              reduce using rule 14 (declaration_specifier -> VOID .)


state 8

    (15) declaration_specifier -> INT .
    (18) declaration_specifier -> INT . pointer
    (71) pointer -> . *
    (72) pointer -> . pointer *

    ID              reduce using rule 15 (declaration_specifier -> INT .)
    *               shift and go to state 14

    pointer                        shift and go to state 15

state 9

    (16) declaration_specifier -> CHAR .
    (19) declaration_specifier -> CHAR . pointer
    (71) pointer -> . *
    (72) pointer -> . pointer *

    ID              reduce using rule 16 (declaration_specifier -> CHAR .)
    *               shift and go to state 14

    pointer                        shift and go to state 16

state 10

    (2) file -> file unit .

    VOID            reduce using rule 2 (file -> file unit .)
    INT             reduce using rule 2 (file -> file unit .)
    CHAR            reduce using rule 2 (file -> file unit .)
    FLOAT           reduce using rule 2 (file -> file unit .)
    $end            reduce using rule 2 (file -> file unit .)


state 11

    (4) unit -> declaration ; .

    VOID            reduce using rule 4 (unit -> declaration ; .)
    INT             reduce using rule 4 (unit -> declaration ; .)
    CHAR            reduce using rule 4 (unit -> declaration ; .)
    FLOAT           reduce using rule 4 (unit -> declaration ; .)
    $end            reduce using rule 4 (unit -> declaration ; .)


state 12

    (5) fun_def -> declaration_specifier ID . ( ) compound_statement
    (6) fun_def -> declaration_specifier ID . ( declaration_list ) compound_statement
    (30) declaration -> declaration_specifier ID . [ NUMBER ] = { expression_list }
    (31) declaration -> declaration_specifier ID . [ NUMBER ]
    (32) declaration -> declaration_specifier ID . [ FLOAT ] = { expression_list }
    (33) declaration -> declaration_specifier ID . [ FLOAT ]
    (34) declaration -> declaration_specifier ID . = expression
    (35) declaration -> declaration_specifier ID .

    (               shift and go to state 17
    [               shift and go to state 18
    =               shift and go to state 19
    ;               reduce using rule 35 (declaration -> declaration_specifier ID .)


state 13

    (20) declaration_specifier -> FLOAT pointer .
    (72) pointer -> pointer . *

    ID              reduce using rule 20 (declaration_specifier -> FLOAT pointer .)
    *               shift and go to state 20


state 14

    (71) pointer -> * .

    *               reduce using rule 71 (pointer -> * .)
    ID              reduce using rule 71 (pointer -> * .)


state 15

    (18) declaration_specifier -> INT pointer .
    (72) pointer -> pointer . *

    ID              reduce using rule 18 (declaration_specifier -> INT pointer .)
    *               shift and go to state 20


state 16

    (19) declaration_specifier -> CHAR pointer .
    (72) pointer -> pointer . *

    ID              reduce using rule 19 (declaration_specifier -> CHAR pointer .)
    *               shift and go to state 20


state 17

    (5) fun_def -> declaration_specifier ID ( . ) compound_statement
    (6) fun_def -> declaration_specifier ID ( . declaration_list ) compound_statement
    (50) declaration_list -> . declaration
    (51) declaration_list -> . declaration_list , declaration
    (30) declaration -> . declaration_specifier ID [ NUMBER ] = { expression_list }
    (31) declaration -> . declaration_specifier ID [ NUMBER ]
    (32) declaration -> . declaration_specifier ID [ FLOAT ] = { expression_list }
    (33) declaration -> . declaration_specifier ID [ FLOAT ]
    (34) declaration -> . declaration_specifier ID = expression
    (35) declaration -> . declaration_specifier ID
    (14) declaration_specifier -> . VOID
    (15) declaration_specifier -> . INT
    (16) declaration_specifier -> . CHAR
    (17) declaration_specifier -> . FLOAT
    (18) declaration_specifier -> . INT pointer
    (19) declaration_specifier -> . CHAR pointer
    (20) declaration_specifier -> . FLOAT pointer

    )               shift and go to state 22
    VOID            shift and go to state 7
    INT             shift and go to state 8
    CHAR            shift and go to state 9
    FLOAT           shift and go to state 6

    declaration_specifier          shift and go to state 21
    declaration_list               shift and go to state 23
    declaration                    shift and go to state 24

state 18

    (30) declaration -> declaration_specifier ID [ . NUMBER ] = { expression_list }
    (31) declaration -> declaration_specifier ID [ . NUMBER ]
    (32) declaration -> declaration_specifier ID [ . FLOAT ] = { expression_list }
    (33) declaration -> declaration_specifier ID [ . FLOAT ]

    NUMBER          shift and go to state 25
    FLOAT           shift and go to state 26


state 19

    (34) declaration -> declaration_specifier ID = . expression
    (10) expression -> . ID ( )
    (11) expression -> . ID ( expression_list )
    (12) expression -> . ASM ( S_CONST )
    (13) expression -> . PRINTF ( S_CONST )
    (36) expression -> . MINUSMINUS ID
    (37) expression -> . ID MINUSMINUS
    (38) expression -> . PLUSPLUS ID
    (39) expression -> . ID PLUSPLUS
    (40) expression -> . ID XOREQUAL expression
    (41) expression -> . ID ANDEQUAL expression
    (42) expression -> . ID OREQUAL expression
    (43) expression -> . ID TIMESEQUAL expression
    (44) expression -> . ID DIVEQUAL expression
    (45) expression -> . ID PLUSEQUAL expression
    (46) expression -> . ID MINUSEQUAL expression
    (47) expression -> . ID = expression
    (52) expression -> . expression + expression
    (53) expression -> . expression - expression
    (54) expression -> . expression * expression
    (55) expression -> . expression / expression
    (56) expression -> . expression & expression
    (57) expression -> . expression | expression
    (58) expression -> . expression ^ expression
    (59) expression -> . ~ expression
    (60) expression -> . - expression
    (61) expression -> . ( expression )
    (62) expression -> . ID [ expression ]
    (63) expression -> . ID [ expression ] = expression
    (64) expression -> . NUMBER
    (65) expression -> . FLOAT
    (66) expression -> . ID
    (67) expression -> . & ID
    (68) expression -> . & ID [ expression ]
    (69) expression -> . * ID = expression
    (70) expression -> . * ID
    (73) expression -> . C_CONST
    (74) expression -> . eq_exp
    (75) eq_exp -> . expression EQ expression
    (76) eq_exp -> . expression NE expression
    (77) eq_exp -> . expression LOR expression
    (78) eq_exp -> . expression LAND expression
    (79) eq_exp -> . expression < expression
    (80) eq_exp -> . expression > expression
    (81) eq_exp -> . expression GE expression
    (82) eq_exp -> . expression LE expression

    ID              shift and go to state 27
    ASM             shift and go to state 30
    PRINTF          shift and go to state 31
    MINUSMINUS      shift and go to state 32
    PLUSPLUS        shift and go to state 33
    ~               shift and go to state 37
    -               shift and go to state 34
    (               shift and go to state 29
    NUMBER          shift and go to state 38
    FLOAT           shift and go to state 39
    &               shift and go to state 36
    *               shift and go to state 35
    C_CONST         shift and go to state 40

    expression                     shift and go to state 28
    eq_exp                         shift and go to state 41

state 20

    (72) pointer -> pointer * .

    *               reduce using rule 72 (pointer -> pointer * .)
    ID              reduce using rule 72 (pointer -> pointer * .)


state 21

    (30) declaration -> declaration_specifier . ID [ NUMBER ] = { expression_list }
    (31) declaration -> declaration_specifier . ID [ NUMBER ]
    (32) declaration -> declaration_specifier . ID [ FLOAT ] = { expression_list }
    (33) declaration -> declaration_specifier . ID [ FLOAT ]
    (34) declaration -> declaration_specifier . ID = expression
    (35) declaration -> declaration_specifier . ID

    ID              shift and go to state 42


state 22

    (5) fun_def -> declaration_specifier ID ( ) . compound_statement
    (83) compound_statement -> . { statement_list }
    (84) compound_statement -> . { }

    {               shift and go to state 44

    compound_statement             shift and go to state 43

state 23

    (6) fun_def -> declaration_specifier ID ( declaration_list . ) compound_statement
    (51) declaration_list -> declaration_list . , declaration

    )               shift and go to state 45
    ,               shift and go to state 46


state 24

    (50) declaration_list -> declaration .

    )               reduce using rule 50 (declaration_list -> declaration .)
    ,               reduce using rule 50 (declaration_list -> declaration .)


state 25

    (30) declaration -> declaration_specifier ID [ NUMBER . ] = { expression_list }
    (31) declaration -> declaration_specifier ID [ NUMBER . ]

    ]               shift and go to state 47


state 26

    (32) declaration -> declaration_specifier ID [ FLOAT . ] = { expression_list }
    (33) declaration -> declaration_specifier ID [ FLOAT . ]

    ]               shift and go to state 48


state 27

    (10) expression -> ID . ( )
    (11) expression -> ID . ( expression_list )
    (37) expression -> ID . MINUSMINUS
    (39) expression -> ID . PLUSPLUS
    (40) expression -> ID . XOREQUAL expression
    (41) expression -> ID . ANDEQUAL expression
    (42) expression -> ID . OREQUAL expression
    (43) expression -> ID . TIMESEQUAL expression
    (44) expression -> ID . DIVEQUAL expression
    (45) expression -> ID . PLUSEQUAL expression
    (46) expression -> ID . MINUSEQUAL expression
    (47) expression -> ID . = expression
    (62) expression -> ID . [ expression ]
    (63) expression -> ID . [ expression ] = expression
    (66) expression -> ID .

    (               shift and go to state 49
    MINUSMINUS      shift and go to state 50
    PLUSPLUS        shift and go to state 51
    XOREQUAL        shift and go to state 52
    ANDEQUAL        shift and go to state 53
    OREQUAL         shift and go to state 54
    TIMESEQUAL      shift and go to state 55
    DIVEQUAL        shift and go to state 56
    PLUSEQUAL       shift and go to state 57
    MINUSEQUAL      shift and go to state 58
    =               shift and go to state 59
    [               shift and go to state 60
    +               reduce using rule 66 (expression -> ID .)
    -               reduce using rule 66 (expression -> ID .)
    *               reduce using rule 66 (expression -> ID .)
    /               reduce using rule 66 (expression -> ID .)
    &               reduce using rule 66 (expression -> ID .)
    |               reduce using rule 66 (expression -> ID .)
    ^               reduce using rule 66 (expression -> ID .)
    EQ              reduce using rule 66 (expression -> ID .)
    NE              reduce using rule 66 (expression -> ID .)
    LOR             reduce using rule 66 (expression -> ID .)
    LAND            reduce using rule 66 (expression -> ID .)
    <               reduce using rule 66 (expression -> ID .)
    >               reduce using rule 66 (expression -> ID .)
    GE              reduce using rule 66 (expression -> ID .)
    LE              reduce using rule 66 (expression -> ID .)
    ;               reduce using rule 66 (expression -> ID .)
    )               reduce using rule 66 (expression -> ID .)
    ,               reduce using rule 66 (expression -> ID .)
    ]               reduce using rule 66 (expression -> ID .)
    }               reduce using rule 66 (expression -> ID .)


state 28

    (34) declaration -> declaration_specifier ID = expression .
    (52) expression -> expression . + expression
    (53) expression -> expression . - expression
    (54) expression -> expression . * expression
    (55) expression -> expression . / expression
    (56) expression -> expression . & expression
    (57) expression -> expression . | expression
    (58) expression -> expression . ^ expression
    (75) eq_exp -> expression . EQ expression
    (76) eq_exp -> expression . NE expression
    (77) eq_exp -> expression . LOR expression
    (78) eq_exp -> expression . LAND expression
    (79) eq_exp -> expression . < expression
    (80) eq_exp -> expression . > expression
    (81) eq_exp -> expression . GE expression
    (82) eq_exp -> expression . LE expression

    ;               reduce using rule 34 (declaration -> declaration_specifier ID = expression .)
    )               reduce using rule 34 (declaration -> declaration_specifier ID = expression .)
    ,               reduce using rule 34 (declaration -> declaration_specifier ID = expression .)
    +               shift and go to state 61
    -               shift and go to state 62
    *               shift and go to state 63
    /               shift and go to state 64
    &               shift and go to state 65
    |               shift and go to state 66
    ^               shift and go to state 67
    EQ              shift and go to state 68
    NE              shift and go to state 69
    LOR             shift and go to state 70
    LAND            shift and go to state 71
    <               shift and go to state 72
    >               shift and go to state 73
    GE              shift and go to state 74
    LE              shift and go to state 75


state 29
